@@ -12,6 +12,15 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+/**
+ * Tab completion for every top-level MarbleDrop command (md, race, tutorial,
+ * team, dust, station, tasks, recipes - see CommandKit's javadoc for why
+ * there are this many). Each gets its own dedicated helper method here,
+ * dispatched by command name in onTabComplete - the per-command arg
+ * positions below are one shallower than they were back when everything
+ * lived under "/md <sub> ...", since the top-level command name itself no
+ * longer eats an args slot.
+ */
 public class CommandKitTabCompletion implements TabCompleter {
 
   private final TrackManager tracks;
@@ -57,6 +66,21 @@ public class CommandKitTabCompletion implements TabCompleter {
     return names;
   }
 
+  @Override
+  public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    String name = command.getName().toLowerCase();
+
+    return switch (name) {
+      case "tasks" -> tasksTabComplete(sender, args);
+      case "race" -> raceTabComplete(sender, args);
+      case "tutorial" -> tutorialTabComplete(sender, args);
+      case "dust" -> dustTabComplete(sender, args);
+      case "station" -> stationTabComplete(sender, args);
+      case "md" -> mdTabComplete(sender, args);
+      default -> Collections.emptyList(); // "team" takes no args, nothing else routes here
+    };
+  }
+
   // ---- /tasks <sub> ----
   private List<String> tasksTabComplete(CommandSender sender, String[] args) {
     if (args.length == 1) {
@@ -96,79 +120,120 @@ public class CommandKitTabCompletion implements TabCompleter {
     return Collections.emptyList();
   }
 
-  @Override
-  public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-
-    if (command.getName().equalsIgnoreCase("tasks")) {
-      return tasksTabComplete(sender, args);
-    }
-
-    // Only for /md
-    if (!command.getName().equalsIgnoreCase("md")) return Collections.emptyList();
-
-    // ---- /md <sub> ----
+  // ---- /race <sub> ----
+  private List<String> raceTabComplete(CommandSender sender, String[] args) {
     if (args.length == 1) {
-      List<String> base = new ArrayList<>();
+      List<String> raceSubs = new ArrayList<>();
+      raceSubs.add("gui");
+      raceSubs.add("watch");
+      raceSubs.add("unwatch");
+      raceSubs.add("leavewatch");
+      raceSubs.add("join");
+      raceSubs.add("leave");
+      raceSubs.add("next");
 
-      // everyone
-      base.add("help");
-      base.add("dust");
-      base.add("race");
-      base.add("races");
-      base.add("join");
-      base.add("leave");
-      base.add("team");
-      base.add("tutorial");
-
-      // admin-only router targets (TrackCommand and UpgradeStationCommand
-      // both gate everything on marbledrop.admin, same as the station
-      // give/remove/count commands below)
       if (isAdmin(sender)) {
-        base.add("upgrade");
-        base.add("upgrades");
-        base.add("track");
-        base.add("table");
-        base.add("infusiontable");
-        base.add("recycler");
-        base.add("recycle");
-
-        base.add("reload");
-        base.add("update");
-        base.add("debug");
-        base.add("pdc");
+        raceSubs.add("open");
+        raceSubs.add("close");
+        raceSubs.add("start");
+        raceSubs.add("clear");
+        raceSubs.add("purge");
+        raceSubs.add("forcecycle");
+        raceSubs.add("test");
+        raceSubs.add("schedule");
       }
 
-      return filterStartsWith(base, args[0]);
+      return filterStartsWith(raceSubs, args[0]);
     }
 
-    // ---- /md upgrade|upgrades <sub> ---- (admin-only: UpgradeStationCommand)
-    if (args.length == 2 && (args[0].equalsIgnoreCase("upgrade") || args[0].equalsIgnoreCase("upgrades"))) {
+    // ---- /race <sub> <trackId> ----
+    if (args.length == 2) {
+      String sub = args[0].toLowerCase();
+
+      if (sub.equals("open") || sub.equals("close") || sub.equals("start") || sub.equals("clear") || sub.equals("test")) {
+        if (!isAdmin(sender)) return Collections.emptyList();
+        return filterStartsWith(trackIds(), args[1]);
+      }
+      if (sub.equals("watch")) {
+        return filterStartsWith(trackIds(), args[1]);
+      }
+
+      return Collections.emptyList();
+    }
+
+    // ---- /race test <trackId> <aiCount> ----
+    if (args.length == 3 && args[0].equalsIgnoreCase("test")) {
       if (!isAdmin(sender)) return Collections.emptyList();
-
-      List<String> upSubs = new ArrayList<>();
-      upSubs.add("give");
-      upSubs.add("remove");
-      upSubs.add("count");
-      return filterStartsWith(upSubs, args[1]);
+      return filterStartsWith(List.of("1", "2", "3", "4", "5", "noself"), args[2]);
     }
 
-    // ---- /md dust <sub> ----
-    if (args.length == 2 && args[0].equalsIgnoreCase("dust")) {
+    // ---- /race test <trackId> <aiCount> noself ----
+    if (args.length == 4 && args[0].equalsIgnoreCase("test")) {
+      if (!isAdmin(sender)) return Collections.emptyList();
+      return filterStartsWith(List.of("noself"), args[3]);
+    }
+
+    return Collections.emptyList();
+  }
+
+  // ---- /tutorial <sub> ----
+  private List<String> tutorialTabComplete(CommandSender sender, String[] args) {
+    if (args.length == 1) {
+      List<String> tutorialSubs = new ArrayList<>();
+      tutorialSubs.add("start");
+      tutorialSubs.add("status");
+
+      if (isAdmin(sender)) {
+        tutorialSubs.add("reset");
+        tutorialSubs.add("skip");
+        tutorialSubs.add("setlocation");
+        tutorialSubs.add("clearlocation");
+        tutorialSubs.add("setrace");
+        tutorialSubs.add("setpost");
+        tutorialSubs.add("setcraftframes");
+      }
+
+      return filterStartsWith(tutorialSubs, args[0]);
+    }
+
+    // ---- /tutorial status|reset|skip|setlocation|clearlocation|setrace <arg> ----
+    if (args.length == 2) {
+      String sub = args[0].toLowerCase();
+
+      if (sub.equals("status")) {
+        return filterStartsWith(onlinePlayerNames(), args[1]);
+      }
+      if (sub.equals("reset") || sub.equals("skip")) {
+        if (!isAdmin(sender)) return Collections.emptyList();
+        return filterStartsWith(onlinePlayerNames(), args[1]);
+      }
+      if (sub.equals("setlocation") || sub.equals("clearlocation")) {
+        if (!isAdmin(sender)) return Collections.emptyList();
+        return filterStartsWith(tutorialStepNames(), args[1]);
+      }
+      if (sub.equals("setrace")) {
+        if (!isAdmin(sender)) return Collections.emptyList();
+        return filterStartsWith(trackIds(), args[1]);
+      }
+
+      return Collections.emptyList();
+    }
+
+    return Collections.emptyList();
+  }
+
+  // ---- /dust <sub> ----
+  private List<String> dustTabComplete(CommandSender sender, String[] args) {
+    if (args.length == 1) {
       List<String> dustSubs = new ArrayList<>();
-
-      // If your DustCommand supports subcommands, add them here.
-      // dustSubs.add("balance");
-      // dustSubs.add("pay");
-
       if (isAdmin(sender)) {
         dustSubs.add("admin");
       }
-
-      return filterStartsWith(dustSubs, args[1]);
+      return filterStartsWith(dustSubs, args[0]);
     }
 
-    // ---- /md dust admin <sub> ----
-    if (args.length == 3 && args[0].equalsIgnoreCase("dust") && args[1].equalsIgnoreCase("admin")) {
+    // ---- /dust admin <sub> ----
+    if (args.length == 2 && args[0].equalsIgnoreCase("admin")) {
       if (!isAdmin(sender)) return Collections.emptyList();
 
       List<String> dustAdminSubs = new ArrayList<>();
@@ -177,26 +242,26 @@ public class CommandKitTabCompletion implements TabCompleter {
       dustAdminSubs.add("take"); // alias for remove - see DustAdminCommand
       dustAdminSubs.add("set");
 
-      return filterStartsWith(dustAdminSubs, args[2]);
+      return filterStartsWith(dustAdminSubs, args[1]);
     }
 
-    // ---- /md dust admin <sub> <player> ----
-    if (args.length == 4 && args[0].equalsIgnoreCase("dust") && args[1].equalsIgnoreCase("admin")) {
+    // ---- /dust admin <sub> <player> ----
+    if (args.length == 3 && args[0].equalsIgnoreCase("admin")) {
       if (!isAdmin(sender)) return Collections.emptyList();
 
-      String action = args[2].toLowerCase();
+      String action = args[1].toLowerCase();
       if (action.equals("give") || action.equals("remove") || action.equals("take") || action.equals("set")) {
-        return filterStartsWith(onlinePlayerNames(), args[3]);
+        return filterStartsWith(onlinePlayerNames(), args[2]);
       }
 
       return Collections.emptyList();
     }
 
-    // ---- /md dust admin <sub> <player> <amount> ----
-    if (args.length == 5 && args[0].equalsIgnoreCase("dust") && args[1].equalsIgnoreCase("admin")) {
+    // ---- /dust admin <sub> <player> <amount> ----
+    if (args.length == 4 && args[0].equalsIgnoreCase("admin")) {
       if (!isAdmin(sender)) return Collections.emptyList();
 
-      String action = args[2].toLowerCase();
+      String action = args[1].toLowerCase();
       if (action.equals("give") || action.equals("remove") || action.equals("take") || action.equals("set")) {
         List<String> amounts = new ArrayList<>();
         amounts.add("50");
@@ -205,33 +270,53 @@ public class CommandKitTabCompletion implements TabCompleter {
         amounts.add("500");
         amounts.add("1000");
         amounts.add("2500");
-        return filterStartsWith(amounts, args[4]);
+        return filterStartsWith(amounts, args[3]);
       }
 
       return Collections.emptyList();
     }
 
-    // ---- /md table|infusiontable <sub> ----
-    if (args.length == 2 && (args[0].equalsIgnoreCase("table") || args[0].equalsIgnoreCase("infusiontable"))) {
-      if (!isAdmin(sender)) return Collections.emptyList();
+    return Collections.emptyList();
+  }
 
-      List<String> tableSubs = new ArrayList<>();
-      tableSubs.add("give");
-      tableSubs.add("remove");
-      tableSubs.add("count");
-      tableSubs.add("private");
-      return filterStartsWith(tableSubs, args[1]);
+  // ---- /station <table|recycler|upgrade> <sub> ---- (whole command is admin-only)
+  private List<String> stationTabComplete(CommandSender sender, String[] args) {
+    if (!isAdmin(sender)) return Collections.emptyList();
+
+    if (args.length == 1) {
+      return filterStartsWith(List.of("table", "recycler", "upgrade"), args[0]);
     }
 
-    // ---- /md recycler|recycle <sub> ----
-    if (args.length == 2 && (args[0].equalsIgnoreCase("recycler") || args[0].equalsIgnoreCase("recycle"))) {
-      if (!isAdmin(sender)) return Collections.emptyList();
+    if (args.length == 2) {
+      String type = args[0].toLowerCase();
+      List<String> subs = new ArrayList<>(List.of("give", "remove", "count"));
+      if (type.equals("table")) subs.add("private"); // InfusionTableCommand-only
 
-      List<String> recyclerSubs = new ArrayList<>();
-      recyclerSubs.add("give");
-      recyclerSubs.add("remove");
-      recyclerSubs.add("count");
-      return filterStartsWith(recyclerSubs, args[1]);
+      if (!type.equals("table") && !type.equals("recycler") && !type.equals("upgrade")) {
+        return Collections.emptyList();
+      }
+      return filterStartsWith(subs, args[1]);
+    }
+
+    return Collections.emptyList();
+  }
+
+  // ---- /md <sub> ----
+  private List<String> mdTabComplete(CommandSender sender, String[] args) {
+    if (args.length == 1) {
+      List<String> base = new ArrayList<>();
+      base.add("help");
+      base.add("version");
+
+      if (isAdmin(sender)) {
+        base.add("track");
+        base.add("reload");
+        base.add("update");
+        base.add("debug");
+        base.add("pdc");
+      }
+
+      return filterStartsWith(base, args[0]);
     }
 
     // ---- /md track <sub> ----
@@ -270,102 +355,6 @@ public class CommandKitTabCompletion implements TabCompleter {
     if (args.length == 4 && args[0].equalsIgnoreCase("track") && args[1].equalsIgnoreCase("laps")) {
       if (!isAdmin(sender)) return Collections.emptyList();
       return filterStartsWith(List.of("1", "2", "3", "4", "5"), args[3]);
-    }
-
-    // ---- /md race|races <sub> ----
-    if (args.length == 2 && (args[0].equalsIgnoreCase("race") || args[0].equalsIgnoreCase("races"))) {
-      List<String> raceSubs = new ArrayList<>();
-      raceSubs.add("gui");
-      raceSubs.add("watch");
-      raceSubs.add("unwatch");
-      raceSubs.add("leavewatch");
-      raceSubs.add("join");
-      raceSubs.add("leave");
-      raceSubs.add("next");
-
-      if (isAdmin(sender)) {
-        raceSubs.add("open");
-        raceSubs.add("close");
-        raceSubs.add("start");
-        raceSubs.add("clear");
-        raceSubs.add("purge");
-        raceSubs.add("forcecycle");
-        raceSubs.add("test");
-        raceSubs.add("schedule");
-      }
-
-      return filterStartsWith(raceSubs, args[1]);
-    }
-
-    // ---- /md race|races <sub> <trackId> ----
-    if (args.length == 3 && (args[0].equalsIgnoreCase("race") || args[0].equalsIgnoreCase("races"))) {
-      String sub = args[1].toLowerCase();
-
-      if (sub.equals("open") || sub.equals("close") || sub.equals("start") || sub.equals("clear") || sub.equals("test")) {
-        if (!isAdmin(sender)) return Collections.emptyList();
-        return filterStartsWith(trackIds(), args[2]);
-      }
-      if (sub.equals("watch")) {
-        return filterStartsWith(trackIds(), args[2]);
-      }
-
-      return Collections.emptyList();
-    }
-
-    // ---- /md race|races test <trackId> <aiCount> ----
-    if (args.length == 4 && (args[0].equalsIgnoreCase("race") || args[0].equalsIgnoreCase("races"))
-            && args[1].equalsIgnoreCase("test")) {
-      if (!isAdmin(sender)) return Collections.emptyList();
-      return filterStartsWith(List.of("1", "2", "3", "4", "5", "noself"), args[3]);
-    }
-
-    // ---- /md race|races test <trackId> <aiCount> noself ----
-    if (args.length == 5 && (args[0].equalsIgnoreCase("race") || args[0].equalsIgnoreCase("races"))
-            && args[1].equalsIgnoreCase("test")) {
-      if (!isAdmin(sender)) return Collections.emptyList();
-      return filterStartsWith(List.of("noself"), args[4]);
-    }
-
-    // ---- /md tutorial <sub> ----
-    if (args.length == 2 && args[0].equalsIgnoreCase("tutorial")) {
-      List<String> tutorialSubs = new ArrayList<>();
-      tutorialSubs.add("start");
-      tutorialSubs.add("status");
-
-      if (isAdmin(sender)) {
-        tutorialSubs.add("reset");
-        tutorialSubs.add("skip");
-        tutorialSubs.add("setlocation");
-        tutorialSubs.add("clearlocation");
-        tutorialSubs.add("setrace");
-        tutorialSubs.add("setpost");
-        tutorialSubs.add("setcraftframes");
-      }
-
-      return filterStartsWith(tutorialSubs, args[1]);
-    }
-
-    // ---- /md tutorial status|reset|skip <player> ----
-    if (args.length == 3 && args[0].equalsIgnoreCase("tutorial")) {
-      String sub = args[1].toLowerCase();
-
-      if (sub.equals("status")) {
-        return filterStartsWith(onlinePlayerNames(), args[2]);
-      }
-      if (sub.equals("reset") || sub.equals("skip")) {
-        if (!isAdmin(sender)) return Collections.emptyList();
-        return filterStartsWith(onlinePlayerNames(), args[2]);
-      }
-      if (sub.equals("setlocation") || sub.equals("clearlocation")) {
-        if (!isAdmin(sender)) return Collections.emptyList();
-        return filterStartsWith(tutorialStepNames(), args[2]);
-      }
-      if (sub.equals("setrace")) {
-        if (!isAdmin(sender)) return Collections.emptyList();
-        return filterStartsWith(trackIds(), args[2]);
-      }
-
-      return Collections.emptyList();
     }
 
     return Collections.emptyList();
